<resources>

    <string name="app_name">API - Maquiagem</string>

    <!-- Activity MainActivity-->
    <string name="edit_type">Tipo</string>
    <string name="edit_marca">Marca</string>
    <string name="tip_image">Imagem de Maquiagem</string>
    <string name="btn_search">Pesquisar</string>
    <string name="string_empty"> </string>
    <string name="value_required">Campo Obrigatorio</string>

    <!-- Mensagens de Erro -->
    <string name="table_empty">A Tabela não Possuem nenhum Dado</string>
    <string name="title_noConnection">Sem Internet</string>
    <string name="title_invalidData">Dados Invalidos</string>
    <string name="title_noGps">Sem GPS</string>
    <string name="title_noExist">Produto e/ou Marca não Encontrado</string>
    <string name="title_noLocation">Sem Localização</string>
    <string name="error_input">Preencha os Campos</string>
    <string name="error_noExists">Não existe nenhum Produto Cadastrado com esse Tipo e Marca</string>
    <string name="error_connection">Sem Conexão com a Internet</string>
    <string name="error_json">Erro na Leitura dos Dados, Tente Novamente</string>
    <string name="error_noGps">Sem conexão com o GPS</string>
    <string name="error_location">Erro ao Recuperar a Ultima Localização</string>
    <string name="error_recoveryData">Nenhum dado foi informado para a Busca</string>
    <string name="error_sensor">Sensor de Proximidade não Disponivel no Dispostivo</string>
    <string name="error_selected">Nenhuma Opção foi Selecionada.&lt;br />Tente Novamente</string>

    <!-- Strings do Menu -->
    <string name="clear_bd">Limpar Dados Salvos</string>
    <string name="change_theme">Alterar Tema</string>
    <string name="location_now">Localização Atual</string>
    <string name="sensor_menu">Sensor de Luminosidade</string>

    <!-- Layout Result-->
    <string name="title_result">Resultados da Busca</string>
    <string name="return_search">Fazer outra Busca</string>
    <string name="name_product">Nome do Produto</string>
    <string name="currencyPrice_product">Moeda - Preço</string>
    <string name="type_product"><b>Tipo: </b></string>
    <string name="description_product"><b>Descrição: </b></string>
    <string name="fill_text">Informações da API</string>
    <string name="description_imageProduct">Imagem do Produto</string>
    <string name="empty_name">Produto sem Nome</string>
    <string name="empty_price">Preço não Encontrado</string>
    <string name="empty_description">Produto sem Descrição</string>

    <!-- Activity Location (&lt; = '<' em HTML)-->
    <string name="txt_titleLocation"><b>Localização Atual</b></string>
    <string name="txt_noSearch">Não encontramos sua Localização.&lt;br /> Tente Novamente</string>
    <string name="txt_probablyError">Essa é uma localização baseada na ultima localização
        registrada. Pode representar um <b>enderço não exato</b></string>
    <string name="button_reset">Tentar Novamente</string>
    <string name="txt_wait">Aguarde enquanto Buscamos os Dados…</string>
    <string name="txt_country">&lt;b>País&lt;/b>: %1$s - %2$s</string>
    <string name="txt_city">&lt;b>Cidade&lt;/b>: %1$s - %2$s</string>
    <string name="txt_address">&lt;b>Endereço&lt;/b>: %1$s - %2$s, %3$s</string>
    <string name="txt_cep">&lt;b>CEP&lt;/b>: %s</string>

    <!-- Fragment FeedbackLocation -->
    <string name="rbtn_wrongLocation">Localização Incorreta</string>
    <string name="rbtn_correctLocation">Localização Correta</string>
    <string name="btn_showFragment">Mostrar Opções</string>
    <string name="btn_sendLocation">Enviar Dados</string>

    <!-- Layout Widget -->
    <string name="txt_idWidget">&lt;b>ID Widget&lt;/b>: %d</string>
    <string name="txt_lastUpdate">&lt;b>Numero de Atualizações&lt;/b>: %d</string>
    <string name="txt_updateTime">&lt;b>Ultima Atualização&lt;/b>: %s</string>
    <string name="txt_formatDateCount">%1$d - %2$s</string>
    <string name="txt_makeupSearch">Buscas de Maquiagens:</string>
    <string name="txt_locationSearch">Localizações Buscadas:</string>
    <string name="txt_brandTypeFormat">%1$s</string>
    <string name="txt_divider">/</string>
    <string name="description_imageButton">Atualizar Widget</string>

</resources>